# netku

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  manage.py
.github/workflows/: assistant-cd.yml  assistant-ci.yml  build-landing.yml  common.yml  landing-cd.yml  (+8 more)
common/python/: pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
common/python/src/common/auth/: __init__.py  authorization.py  backend.py  local.py  remote.py  remote_auth.py  security.py
common/python/src/common/caching/: parser.py  redis.py
common/python/src/common/config/: __init__.py  admin.py  auth.py  network.py  postgres.py  rabbitmq.py  redis.py
common/python/src/common/containers/: __init__.py  auth.py  base.py  grpc.py  postgres.py  rabbitmq.py  redis.py  utils.py
common/python/src/common/contracts/: bus.py  event.py  protocols.py  uow.py
common/python/src/common/contracts/clients/: __init__.py  base.py  leader.py  message.py  remote.py  security.py
common/python/src/common/contracts/events/: __init__.py  base.py
common/python/src/common/contracts/services/: __init__.py  auth.py
common/python/src/common/events/: proxy.py  scope.py
common/python/src/common/grpc/: __init__.py  base.py
common/python/src/common/http/: retry.py
common/python/src/common/logging/: __init__.py
common/python/src/common/messaging/: __init__.py  bus.py  clients.py
common/python/src/common/schemas/: __init__.py  client_credential.py  proxy.py  token.py
common/python/src/common/sql/: orm.py  postgres_connection.py  postgres_containter.py  repository.py  uow.py
docker/: auth.Dockerfile  kong.Dockerfile  nginx.Dockerfile  proxy.Dockerfile  user.Dockerfile  xray.Dockerfile
messaging/: .env.example
proto/: xray.proto
protobuf/: booking.proto  handler.proto  health.proto  xray.proto
src/: Dockerfile  main.py  requirements.txt  settings.py  xray.py  xray_config.json
xray/: go.mod
(+528 files in other folders)
