# Dev
[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

# Build
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netku_common"
version = "0.1.0"
license = { text = "MIT" }
authors = [
    { name = "Maxim Gerasimov", email = "infanasotku@gmail.com" }
]
dependencies = [
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]",
    "dependency_injector==4.45.0",
    "pytz==2024.2",
    "fastapi==0.115.3",
    "PyYAML==6.0.2",
    "aiohttp==3.10.11"
]


[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"common.logging" = ["*.yaml"]
